changed spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -50,6 +50,10 @@ ul {
 
 @media only screen and (min-width: 25em) {
 
+  html {
+    line-height: 1.3;
+  }
+
   .card {
     display: block;
   }
